--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
 .App {
+  color: #ffffff;
+  font-size: 18px;
+  height: 100vh;
+  padding: 20px 50px 30px 50px;
+}
+
+.logo {
+  text-transform: uppercase;
+  font-size: 150px;
+  width: 100%;
+  height: auto;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todoInputs {
+  width: 100%;
+}
+.inputs {
+  width: 500px;
+  margin: 0px auto 0px auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.textBox {
+  width: 300px;
+  height: 38px;
+  border-radius: 5px;
+  border: 0px;
+  padding: 0px 10px 0px 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button {
+  width: auto;
+  height: 40px;
+  border: 0px;
+  border-radius: 5px;
+  padding: 0px 15px 0px 15px;
+  font-size: 18px;
 }
 
-.App-link {
-  color: #61dafb;
+.add {
+  background-color: #388e30;
+  color: #ffffff;
+}
+.clear {
+  background-color: #d32f2f;
+  color: #ffffff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.checkbox {
+  margin: 5px;
+  border-radius: 5px;
+}
+.todosOutput {
+  width: 100%;
+  height: auto;
+}
+.todos {
+  width: 500px;
+  margin: 30px auto 0px auto;
 }
